--- a/styles/main.css
+++ b/styles/main.css
@@ -9,8 +9,7 @@ h1 {
 .top-banner {
     background: rgb(50, 50, 50);
 }
-header a {
-    
+header a, footer {
     margin: 15px;
     color: lightgrey;
     text-decoration: none;
@@ -22,10 +21,34 @@ nav {
     justify-content: space-between;
     align-items: center;
 }
+.title {
+     font-size: 125%;
+}
 .important {
     background-color: lightgreen;
 }
 main .row {
     padding-top: 5%;
     text-align: center;
+}
+.card-body {
+    display: flex;
+    justify-content: space-around;
+    /* flex-direction: column; */
+}
+.download-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: green;
+    margin: 3%;
+    padding: 3%;
+}
+footer {
+    margin: 0;
+    background-color: rgb(50, 50, 50);
+}
+footer .container {
+    display: flex;
+    justify-content: flex-start;
 }
