--- a/styles/main.css
+++ b/styles/main.css
@@ -25,7 +25,8 @@ nav {
      font-size: 125%;
 }
 .important {
-    background-color: lightgreen;
+    background-color: rgb(230, 245, 230);
+    color: green;
 }
 main .row {
     padding-top: 5%;
