--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,8 @@ footer {
     margin: 0;
     background-color: rgb(50, 50, 50);
 }
-footer .container {
+.footer-nav, .footer-brand {
     display: flex;
-    justify-content: flex-start;
+    flex-flow: row nowrap;
+    align-items: center;
 }
