--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,10 @@
     justify-content: center;
     color: white;
 }
+a, p, h1 {
+    padding: 0;
+    margin: 0;
+}
 h1 {
     font-size: 175%;
 }
@@ -23,9 +27,14 @@ nav {
 }
 .title {
      font-size: 125%;
+     margin: 3%;
 }
 .important {
     background-color: rgb(230, 245, 230);
+    margin: 5%;
+    margin-left: 0;
+    margin-right: 0;
+    padding: 2%;
     color: green;
 }
 main .row {
@@ -42,8 +51,10 @@ main .row {
     flex-direction: column;
     align-items: center;
     background-color: green;
+    color: white;
     margin: 3%;
     padding: 3%;
+    padding-bottom: 1%;
 }
 footer {
     margin: 0;
